--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
     "bip32": "^3.0.1",
     "bip39": "^3.0.4",
     "bitcoinjs-lib": "^6.0.0",
+    "dotenv": "^10.0.0",
     "ecpair": "^1.0.1",
+    "prompt-sync": "^4.1.6",
     "tiny-secp256k1": "^2.1.2"
+  },
+  "devDependencies": {
+    "micro-base": "^0.9.0"
   }
 }
