--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "commonjs",
+        "module": "esnext",
+        "moduleResolution": "node",
         "outDir": "./src",
         "declaration": true,
         "rootDir": "./ts_src",
