--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bitcoinjs-lib": "^6.0.0",
     "dotenv": "^10.0.0",
     "ecpair": "^1.0.1",
+    "ora": "^6.0.1",
     "prompt-sync": "^4.1.6",
     "tiny-secp256k1": "^2.1.2"
   },
